# organvm-engine

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  done.sh  patch2.diff  pyproject.toml  seed.yaml
.claude/plans/: 2026-06-07-irf-parser-and-writeback.md
.gemini/plans/: 2026-06-07-irf-write-back-handoff.md  closeout-2026-06-07.md
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  ecosystem-sync-check.yml  ecosystem-verify-contracts.yml  (+5 more)
.serena/: project.yml
.sops/: cli-module-pattern.md  prompting-standards.md
docs/: governance-cadence-owner.md
notebooks/: prompt-audit.ipynb
receipts/: README.md
scripts/: consolidate-workspace.py
tests/: conftest.py  test_ci_audit.py  test_ci_mandate.py  test_ci_protect.py  test_ci_scaffold.py  test_claudemd.py  test_cli.py  test_cli_seed.py  test_conductor_lifecycle.py  test_content_cadence.py  test_context_changelog.py  test_contextmd.py  test_contrib_planner.py  test_coordination.py  test_dispatch_mcp.py  test_exit_interview_testimony.py  test_git.py  test_governance_atlas.py  test_governance_cadence.py  test_governance_invariants.py  test_governance_mcp.py  test_governance_receipt_custody.py  test_handoff.py  test_irf_cli.py  test_irf_parser.py  test_irf_query.py  test_irf_writer.py  test_mcp_tools.py  test_metrics.py  test_metrics_mcp.py  test_network.py  test_omega.py  test_ontologia_snapshots.py  test_ontology_relations.py  test_organ_config_topology.py  test_paths.py  test_plan_synthesis.py  test_plans_hygiene.py  test_portal_cli_epic6.py  test_portal_state_machine.py  (+19 more)
(+105 files in other folders)
